# dht-to-i2c-expander

./: .gitignore  CMakeLists.txt  DHTExpander.atsln  LICENSE  README.md
DHTExpander/: DHTExpander.componentinfo.xml  DHTExpander.cproj  main.c  twislave.c  twislave.h
src/: main.c  twislave.c  twislave.h
